[gd_scene load_steps=9 format=3 uid="uid://caio0o566w3yt"]

[ext_resource type="Script" uid="uid://cdn04dvj160ua" path="res://ui/upgrade_ui.gd" id="1_viaf3"]
[ext_resource type="Texture2D" uid="uid://do2wjip16pkct" path="res://assets/UI/ui_cursor_add.png" id="2_j3m81"]
[ext_resource type="Script" uid="uid://lap7pwkb0qf2" path="res://ui/ui_interact.gd" id="3_t8w50"]
[ext_resource type="Texture2D" uid="uid://bsuk1ojm5xwyl" path="res://assets/UI/ui_eye_add.png" id="4_8mxvw"]
[ext_resource type="Texture2D" uid="uid://clixdrv1oodv8" path="res://assets/UI/ui_eye_speed.png" id="5_1de2s"]
[ext_resource type="Texture2D" uid="uid://b0h8cemuyykwp" path="res://assets/UI/ui_tentacle_add.png" id="6_uhuio"]
[ext_resource type="Texture2D" uid="uid://02q0p8r72al4" path="res://assets/UI/ui_tentacle_speed.png" id="7_6gajv"]
[ext_resource type="Texture2D" uid="uid://b4fpo3fcdqj1v" path="res://assets/candle1.png" id="8_8mxvw"]

[node name="UpgradeUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_viaf3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 4
layout_mode = 0
offset_left = 1154.0
offset_top = 64.0
offset_right = 1192.0
offset_bottom = 416.0
theme_override_constants/separation = 15

[node name="CursorLVL" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_j3m81")
expand_mode = 4
script = ExtResource("3_t8w50")

[node name="Price" type="Label" parent="VBoxContainer/CursorLVL"]
layout_mode = 0
offset_left = 42.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 31.0
text = "10"

[node name="Level" type="Label" parent="VBoxContainer/CursorLVL"]
modulate = Color(0.720467, 0.720468, 0.720467, 1)
layout_mode = 0
offset_left = -8.0
offset_top = 30.0
offset_right = 2.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 8
text = "0"

[node name="Clicker" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_8mxvw")
expand_mode = 4
script = ExtResource("3_t8w50")

[node name="Price" type="Label" parent="VBoxContainer/Clicker"]
layout_mode = 0
offset_left = 42.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 31.0
text = "10"

[node name="Amount" type="Label" parent="VBoxContainer/Clicker"]
modulate = Color(0.720467, 0.720468, 0.720467, 1)
layout_mode = 0
offset_left = -8.0
offset_top = 30.0
offset_right = 2.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 8
text = "0"

[node name="ClickerLVL" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("5_1de2s")
expand_mode = 4
script = ExtResource("3_t8w50")

[node name="Price" type="Label" parent="VBoxContainer/ClickerLVL"]
layout_mode = 0
offset_left = 42.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 31.0
text = "10"

[node name="LVL" type="Label" parent="VBoxContainer/ClickerLVL"]
modulate = Color(0.720467, 0.720468, 0.720467, 1)
layout_mode = 0
offset_left = -8.0
offset_top = 30.0
offset_right = 2.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 8
text = "0"

[node name="Tent" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("6_uhuio")
expand_mode = 4
script = ExtResource("3_t8w50")

[node name="Price" type="Label" parent="VBoxContainer/Tent"]
layout_mode = 0
offset_left = 42.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 31.0
text = "10"

[node name="LVL" type="Label" parent="VBoxContainer/Tent"]
modulate = Color(0.720467, 0.720468, 0.720467, 1)
layout_mode = 0
offset_left = -8.0
offset_top = 30.0
offset_right = 2.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 8
text = "0"

[node name="TentLVL" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("7_6gajv")
expand_mode = 4
script = ExtResource("3_t8w50")

[node name="Price" type="Label" parent="VBoxContainer/TentLVL"]
layout_mode = 0
offset_left = 42.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 31.0
text = "10"

[node name="LVL" type="Label" parent="VBoxContainer/TentLVL"]
modulate = Color(0.720467, 0.720468, 0.720467, 1)
layout_mode = 0
offset_left = -8.0
offset_top = 30.0
offset_right = 2.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 8
text = "0"

[node name="Candle" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("8_8mxvw")
expand_mode = 4
stretch_mode = 3
script = ExtResource("3_t8w50")

[node name="Price" type="Label" parent="VBoxContainer/Candle"]
layout_mode = 0
offset_left = 42.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 31.0
text = "10"

[node name="LVL" type="Label" parent="VBoxContainer/Candle"]
modulate = Color(0.720467, 0.720468, 0.720467, 1)
layout_mode = 0
offset_left = -8.0
offset_top = 30.0
offset_right = 2.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 8
text = "0"

[connection signal="mouse_entered" from="VBoxContainer/CursorLVL" to="VBoxContainer/CursorLVL" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/CursorLVL" to="VBoxContainer/CursorLVL" method="_on_mouse_exited"]
[connection signal="ui_clicked" from="VBoxContainer/CursorLVL" to="." method="_on_ui_clicked"]
[connection signal="mouse_entered" from="VBoxContainer/Clicker" to="VBoxContainer/Clicker" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Clicker" to="VBoxContainer/Clicker" method="_on_mouse_exited"]
[connection signal="ui_clicked" from="VBoxContainer/Clicker" to="." method="_on_ui_clicked"]
[connection signal="mouse_entered" from="VBoxContainer/ClickerLVL" to="VBoxContainer/ClickerLVL" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/ClickerLVL" to="VBoxContainer/ClickerLVL" method="_on_mouse_exited"]
[connection signal="ui_clicked" from="VBoxContainer/ClickerLVL" to="." method="_on_ui_clicked"]
[connection signal="mouse_entered" from="VBoxContainer/Tent" to="VBoxContainer/Tent" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Tent" to="VBoxContainer/Tent" method="_on_mouse_exited"]
[connection signal="ui_clicked" from="VBoxContainer/Tent" to="." method="_on_ui_clicked"]
[connection signal="mouse_entered" from="VBoxContainer/TentLVL" to="VBoxContainer/TentLVL" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/TentLVL" to="VBoxContainer/TentLVL" method="_on_mouse_exited"]
[connection signal="ui_clicked" from="VBoxContainer/TentLVL" to="." method="_on_ui_clicked"]
[connection signal="mouse_entered" from="VBoxContainer/Candle" to="VBoxContainer/Candle" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Candle" to="VBoxContainer/Candle" method="_on_mouse_exited"]
[connection signal="ui_clicked" from="VBoxContainer/Candle" to="." method="_on_ui_clicked"]
